--- a/src/app/components/filter/filter.module.css
+++ b/src/app/components/filter/filter.module.css
@@ -1,3 +1,49 @@
 .container{
-    flex: 1;
+    flex: 2;
+    background-color: var(--softBg);
+    margin-top: 40px;
+}
+
+.box{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 40px;
+}
+
+
+.filterSection {
+    width: 300px;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.filterCategory {
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.filterCategoryTitle{
+    font-weight: bold;
+}
+
+.filterCategory label {
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+
+/* Additional styles for better appearance */
+#products {
+    margin-left: 320px;
+}
+
+.product {
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
 }
