--- a/src/app/components/search/search.module.css
+++ b/src/app/components/search/search.module.css
@@ -1,9 +1,15 @@
 .searchBar {
     display: flex;
     align-items: center;
-    width: 75%;
+    width: 50%;
+    margin-left: 25%;
+    margin-right: 25%;
     gap: 0;
-    margin-top: 40px;
+    /* margin-top: 40px; */
+    padding-top: 20px;
+    padding-bottom: 40px;
+    background: linear-gradient(to right ,#C22C8F, #831A91);
+
   }
   
   .input {
@@ -11,6 +17,7 @@
     font-size: 16px;
     flex: 4;
     border-radius: 25px 0 0 25px;
+    border: none;
   }
   
   .btn {
@@ -18,6 +25,7 @@
     font-size: 16px;
     height: 36px;
     background-color: #0070f3;
+    background: linear-gradient(to right, #0056b3, #330666);
     color: #fff;
     border: none;
     cursor: pointer;
@@ -44,6 +52,12 @@
     padding: 0.5rem 0.75rem;
     color: var(--textColor);
     background-color: var(--softBg);
+
+  }
+  .searchContainer{
+    /* background-color: #E5348E; */
+    background: linear-gradient(to right, #E5348E, #661190);
+    /* border-radius: 20px 20px 0 0; */
   }
   
   
