--- a/src/app/components/filter/filter.module.css
+++ b/src/app/components/filter/filter.module.css
@@ -2,6 +2,10 @@
     flex: 2;
     background-color: var(--softBg);
     margin-top: 40px;
+    width: 30%;
+    margin-left: 30px;
+    background-color: gray;
+    color: black !important;
 }
 
 .box{
@@ -9,8 +13,8 @@
     flex-direction: column;
     gap: 20px;
     margin-top: 40px;
-    padding-left: 40px;
-    margin-left: 40px;
+    padding-left: 20px;
+    /* margin-left: 40px; */
 }
 
 
@@ -48,4 +52,8 @@
     padding: 10px;
     margin-bottom: 10px;
     border-radius: 5px;
+}
+.maintitle{
+    /* text-align: center; */
+    padding-left: 25%;
 }
