--- a/src/app/components/search/search.module.css
+++ b/src/app/components/search/search.module.css
@@ -1,13 +1,10 @@
 .searchBar {
     display: flex;
     align-items: center;
-    width: 50%;
-    margin-left: 25%;
+    width: 75%;
     margin-right: 25%;
-    gap: 0;
-    /* margin-top: 40px; */
+    margin-left: 10%;
     padding-top: 20px;
-    padding-bottom: 40px;
     background: linear-gradient(to right ,#C22C8F, #831A91);
 
   }
@@ -21,7 +18,7 @@
   }
   
   .btn {
-    padding: 8px 16px;
+    padding: 8px 8px;
     font-size: 16px;
     height: 36px;
     background-color: #0070f3;
@@ -41,11 +38,14 @@
     position: absolute;
     width: 72vw;
     border-radius: 0.375rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   
   .container {
     display: flex;
-    width: 63%;
+    width: 72%;
     justify-content: space-between;
     border:none;
     border-radius: 0.375rem;
@@ -60,4 +60,9 @@
     /* border-radius: 20px 20px 0 0; */
   }
   
+  .loadingContainer{
+    display: flex;
+    align-items: top;
+    justify-content: center;
+  }
   
